--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bkd_linkschat",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start:dev": "nodemon",
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
     "stream-chat": "^9.11.0"
   }
