--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.10",
-    "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
     "stream-chat": "^9.11.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.15",
+    "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2"
   }
 }
