--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start:dev": "nodemon",
+    "dev": "nodemon",
     "build": "npm install && rimraf ./build && tsc",
     "start": "node build/index.js "
   },
